--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div role="presentation" class="container">
+  <div role="main" class="container">
     <div class="card">
       <div class="card__image">
         <img src="./images/image-qr-code.png" alt="QR code">
